--- a/notebook-service-frontend/package.json
+++ b/notebook-service-frontend/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap": "^0.32.4",
     "react-color": "^2.14.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-sidebar": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
