--- a/notebook-service-frontend/package.json
+++ b/notebook-service-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^4.3.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.5",
     "react": "^16.6.3",
