--- a/notebook-service-frontend/package.json
+++ b/notebook-service-frontend/package.json
@@ -3,21 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@trendmicro/react-sidenav": "^0.4.5",
     "@types/react-router-dom": "^4.3.1",
     "axios": "^0.18.0",
-    "jquery": "^3.3.1",
-    "mdbreact": "^4.8.4",
-    "popper.js": "^1.14.5",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
-    "react-burger-menu": "^2.5.4",
-    "react-color": "^2.14.1",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "react-sidebar": "^3.0.2"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
