--- a/notebook-service-frontend/package.json
+++ b/notebook-service-frontend/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-table": "^6.7.17",
     "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
