--- a/notebook-service-frontend/package.json
+++ b/notebook-service-frontend/package.json
@@ -6,12 +6,15 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-table": "^6.7.17",
     "axios": "^0.18.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-split-pane": "^0.1.84",
+    "react-splitter-layout": "^3.0.1",
     "react-table": "^6.8.6"
   },
   "scripts": {
