--- a/notebook-service-frontend/package.json
+++ b/notebook-service-frontend/package.json
@@ -13,6 +13,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-select": "^2.1.2",
     "react-split-pane": "^0.1.84",
     "react-splitter-layout": "^3.0.1",
     "react-table": "^6.8.6"
