--- a/notebook-service-frontend/package.json
+++ b/notebook-service-frontend/package.json
@@ -6,6 +6,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-table": "^6.7.17",
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
